Some changes made

--- a/lakenyasa/index.html
+++ b/lakenyasa/index.html
@@ -86,7 +86,7 @@
             UNAOTUMIKA ZIWANI HUMO
         </h4>
         <img src="assets/img/nyasa2.jpg" width="1000px" height="600px">
-        <a href="assignment.html">ukiachana na ukurasa huu pia tumekuachia maelekezo mafupi
+        <a href="pages/news.html">ukiachana na ukurasa huu pia tumekuachia maelekezo mafupi
             kuhusiana na ukurasa wa viumbe hai vya kibiologia, bonyeza hapa kuona ukurasa huo.
         </a>
         <h5>Above are an example of fish that are found on the lake nyasa</h5>
